# pystackw8

./: manage.py  pyproject.toml
vitalab/: asgi.py  settings.py  urls.py  wsgi.py
vitalab/docs/aula1/: 02- O projeto.md  03- Conf_Iniciais.md  04- Cadastro.md  05- login.md  06- Exames conf. Inicias.md
vitalab/docs/aula2/: 01-Solicitar exame.md  02-Gerenciar pedidos.md  03-Gerenciar exames.md
vitalab/docs/aula3/: 01- Gerar acesso médico.md  02- Gerenciar clientes.md  03- Gerenciar exames dos clientes.md  04- Gerar senha.md  05- Alterar dados do exame.md
vitalab/empresarial/: apps.py  urls.py  utils.py  views.py
vitalab/empresarial/templates/empresarial/: exame_cliente.html
vitalab/exames/: admin.py  apps.py  models.py  urls.py  views.py
vitalab/exames/migrations/: 0001_initial.py  0002_acessomedico.py
vitalab/exames/templates/exames/: acesso_medico.html  gerar_acesso_medico.html  gerenciar_exames.html  gerenciar_pedidos.html  solicitar_exames.html
vitalab/templates/bases/: base.html
vitalab/templates/static/geral/css/: base.css
vitalab/templates/static/usuarios/css/: css.css
vitalab/usuarios/: apps.py  urls.py  views.py
vitalab/usuarios/templates/usuarios/: cadastro.html  login.html
