[tool.poetry]
name = "pystackw8"
version = "0.1.0"
description = "Project based on Pythonando - Out23"
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v"
# testpaths = [
#     "/tests",
# ]
DJANGO_SETTINGS_MODULE = "vitalab.settings"

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
# docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=vitalab -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
